# Kura

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Devlog.md  LICENSE  README.md  contributiion.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: cross-platform-setup.yml  production-release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_extractor.rs  database.rs  main.rs  secure_store.rs
src/components/: DynamicDataTable.tsx  InteractivePdfViewer.css  InteractivePdfViewer.tsx  SetupWizard.tsx
src/lib/: aiSettings.ts  api.ts  pdfExtractor.ts
